# InstituteQnA

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  api_query_results.csv  app.py  pyproject.toml  requirements.txt  retrieved_docs_with_ids.csv  run_complete_pipeline.py  scratch_code.py  test_improvements.py  test_simple.py
.github/workflows/: main_collegeprojectapp.yml
examples/: pdf_extraction_comparison.py  quick_start.py  rag_usage_examples.py
institute_qna/: __init__.py  azure_table_storage.py  logging_cofing.py  logging_config.py
institute_qna/data_extraction/: __init__.py  download_attachment.py  webscrapper.py
institute_qna/data_preprocess/: __init__.py  azure_ai_search_store.py  chroma_vector_store.py  embedding_generation.py  extract_pdf_text.py  knoweldge_base_creation.py  knoweldge_base_creation_utils.py  vector_store_ingestion.py
institute_qna/rag/: __init__.py  llm_handler.py  rag_pipeline.py  retriever.py
static/css/: chat.css  chat_old.css
static/js/: chat.js
templates/: chat.html  dashboard.html  knowledge_base_generate.html
tests/: test_main.py  test_service_health.py
vector_store/pune_admissions/6b9e0d4a-5d0a-428f-a63b-c9de5ae512ca/: index_metadata.pickle
